--- a/include/style/navbar.styl
+++ b/include/style/navbar.styl
@@ -1,8 +1,8 @@
 /* ---------------------------------
  *           Top Navigation
  * --------------------------------- */
-$navbar-item-padding-v ?= 1.25rem
-$navbar-item-padding-h ?= .75rem
+$navbar-item-padding-v ?= 1.05rem
+$navbar-item-padding-h ?= 1.25rem
 $navbar-item-margin-v ?= 0
 $navbar-item-margin-h ?= 0
 
