--- a/include/style/navbar.styl
+++ b/include/style/navbar.styl
@@ -1,8 +1,8 @@
 /* ---------------------------------
  *           Top Navigation
  * --------------------------------- */
-$navbar-item-padding-v ?= 1.25rem
-$navbar-item-padding-h ?= 1.25rem
+$navbar-item-padding-v ?= 1.05rem
+$navbar-item-padding-h ?= .95rem
 $navbar-item-margin-v ?= 0
 $navbar-item-margin-h ?= 0
 
@@ -33,6 +33,7 @@ $navbar-item-margin-h ?= 0
         align-items: center
         padding: $navbar-item-padding-v $navbar-item-padding-h
         margin: $navbar-item-margin-v $navbar-item-margin-h
+        font-size:1.3rem
 
         &.is-active
             background-color: transparent
