--- a/include/style/mystyle/base.styl
+++ b/include/style/mystyle/base.styl
@@ -7,7 +7,8 @@ body, button, input, select, textarea {
 
 body {
   //reference https://www.zpf23.cn/
-  background: url(/img/background.png);
+  //background: url(/img/backg.jpg);
+  //background: #ecd9fa;
 }
 
 // 自定义图片样式
